--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         package="com.udacity.shoestore">
 
     <application
@@ -9,8 +8,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme.NoActionBar"
-            tools:ignore="GoogleAppIndexingWarning">
+            android:theme="@style/AppTheme.NoActionBar">
         <activity
                 android:name=".base.BaseActivity"
                 android:exported="false" />
